--- a/back/django-vue/package.json
+++ b/back/django-vue/package.json
@@ -23,9 +23,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "vue-loader-v16": "^16.0.0-beta.5.4",
-    "webpack-bundle-tracker": "^1.4.0"
+    "eslint-plugin-vue": "^7.0.0"
   },
   "eslintConfig": {
     "root": true,
